--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Landed by HTML5 UP</title>
+    <title>Ting Luen Cheng Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -21,12 +21,12 @@
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header">
-        <h1 id="logo"><a href="index.html">Landed</a></h1>
+        <h1 id="logo"><a href="index.html">Software Developer</a></h1>
         <nav id="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a href="#">Layouts</a>
+              <a href="#">Projects</a>
               <ul>
                 <li><a href="left-sidebar.html">Left Sidebar</a></li>
                 <li><a href="right-sidebar.html">Right Sidebar</a></li>
@@ -42,8 +42,8 @@
                 </li>
               </ul>
             </li>
-            <li><a href="elements.html">Elements</a></li>
-            <li><a href="#" class="button primary">Sign Up</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -186,11 +186,11 @@
             </div>
           </div>
         </div>
-        <a href="#five" class="goto-next scrolly">Next</a>
+        <a href="#skills" class="goto-next scrolly">Next</a>
       </section>
 
-      <!-- Five -->
-      <section id="five" class="wrapper style1 special fade-up">
+      <!-- Skills -->
+      <section id="skills" class="wrapper style1 special fade-up">
         <div class="container">
           <header class="major">
             <h2>Accumsan sed tempus adipiscing blandit</h2>
@@ -259,8 +259,8 @@
         </div>
       </section>
 
-      <!-- Six -->
-      <section id="six" class="wrapper style2 special fade">
+      <!-- Contact -->
+      <section id="contact" class="wrapper style2 special fade">
         <div class="container">
           <header>
             <h2>Magna faucibus lorem diam</h2>
