Home page descriptions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header">
-        <h1 id="logo"><a href="index.html">Software Developer</a></h1>
+        <h1 id="logo"><a href="index.html">Software Engineer</a></h1>
         <nav id="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -52,10 +52,12 @@
       <section id="banner">
         <div class="content">
           <header>
-            <h2>The future has landed</h2>
+            <h2>Ting Luen Cheng</h2>
             <p>
-              And there are no hoverboards or flying cars.<br />
-              Just apps. Lots of mother flipping apps.
+              Expertise in full-stack web engineering from concept to
+              deployment.
+              <br />
+              Passionate about building apps that make a difference.
             </p>
           </header>
           <span class="image"><img src="images/pic01.jpg" alt="" /></span>
