insert first project info

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
           <header>
             <h2>Ting Luen Cheng</h2>
             <p>
-              Expertise in full-stack web engineering from concept to
-              deployment.
+              Expertise in full-stack web engineering from concept to deployment
               <br />
-              Passionate about building apps that make a difference.
+              Passionate about building apps that make a difference
             </p>
           </header>
           <span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -68,36 +67,48 @@
       <!-- One -->
       <section id="one" class="spotlight style1 bottom">
         <span class="image fit main"
-          ><img src="images/pic02.jpg" alt=""
+          ><img src="images/build3d_background.png" alt=""
         /></span>
         <div class="content">
           <div class="container">
             <div class="row">
               <div class="col-4 col-12-medium">
                 <header>
-                  <h2>Odio faucibus ipsum integer consequat</h2>
-                  <p>
-                    Nascetur eu nibh vestibulum amet gravida nascetur praesent
-                  </p>
+                  <h2>Build 3D</h2>
+                  <p>Design, Build, Share</p>
                 </header>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-                  Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-                  nisi praesent dolor adipiscing. Integer mi sed nascetur cep
-                  aliquet augue varius tempus lobortis porttitor accumsan
-                  consequat adipiscing lorem dolor.
+                  A 3D model-sharing platform that empowers designers to create
+                  and share their designs, connecting 3D model enthusiasts in a
+                  community of creators and fans.
                 </p>
               </div>
               <div class="col-4 col-12-medium">
-                <p>
-                  Morbi enim nascetur et placerat lorem sed iaculis neque ante
-                  adipiscing adipiscing metus massa. Blandit orci porttitor
-                  semper. Arcu phasellus tortor enim mi mi nisi praesent
-                  adipiscing. Integer mi sed nascetur cep aliquet augue varius
-                  tempus. Feugiat lorem ipsum dolor nullam.
-                </p>
+                <ul class="actions">
+                  <li>
+                    <a href="http://54.210.20.214:4000/" class="button"
+                      >Learn More</a
+                    >
+                  </li>
+                </ul>
+                <ul class="icons">
+                  <li>
+                    <a
+                      href="https://github.com/TLCheng11/build-something-new"
+                      class="icon brands alt fa-github"
+                      ><span class="label">GitHub</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.loom.com/share/3ce747663ab64845b45471c884b101bf"
+                      class="icon brands alt fa-youtube"
+                      ><span class="label">Video</span></a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
