first project, set a tag target to new tab

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
               <div class="col-4 col-12-medium">
                 <ul class="actions">
                   <li>
-                    <a href="http://54.210.20.214:4000/" class="button"
+                    <a
+                      href="http://54.210.20.214:4000/"
+                      target="_blan
+                    "
+                      class="button"
                       >Learn More</a
                     >
                   </li>
@@ -97,6 +101,7 @@
                   <li>
                     <a
                       href="https://github.com/TLCheng11/build-something-new"
+                      target="_blank"
                       class="icon brands alt fa-github"
                       ><span class="label">GitHub</span></a
                     >
@@ -104,6 +109,7 @@
                   <li>
                     <a
                       href="https://www.loom.com/share/3ce747663ab64845b45471c884b101bf"
+                      target="_blank"
                       class="icon brands alt fa-youtube"
                       ><span class="label">Video</span></a
                     >
