insert second project

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                   <li>
                     <a
                       href="http://54.210.20.214:4000/"
-                      target="_blan
-                    "
+                      target="_blank"
                       class="button"
                       >Learn More</a
                     >
@@ -125,21 +124,44 @@
       <!-- Two -->
       <section id="two" class="spotlight style2 right">
         <span class="image fit main"
-          ><img src="images/pic03.jpg" alt=""
+          ><img src="images/td_games_background.png" alt=""
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum amet non magna accumsan</h2>
-            <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+            <h2>TD Games</h2>
+            <p>Lets play a board game!</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            An internet-based gaming platform that facilitates real-time
+            playing, interaction, and messaging among its users.
           </p>
           <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li>
+              <a
+                href="http://54.210.20.214:3021/"
+                target="_blank"
+                class="button"
+                >Learn More</a
+              >
+            </li>
+          </ul>
+          <ul class="icons">
+            <li>
+              <a
+                href="https://github.com/TLCheng11/td-games-react-django.git"
+                target="_blank"
+                class="icon brands alt fa-github"
+                ><span class="label">GitHub</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.loom.com/share/9382fb7879934cf3ae3c5874e9a00fb5"
+                target="_blank"
+                class="icon brands alt fa-youtube"
+                ><span class="label">Video</span></a
+              >
+            </li>
           </ul>
         </div>
         <a href="#three" class="goto-next scrolly">Next</a>
