insert third and fourth projects

--- a/index.html
+++ b/index.html
@@ -170,21 +170,37 @@
       <!-- Three -->
       <section id="three" class="spotlight style3 left">
         <span class="image fit main bottom"
-          ><img src="images/pic04.jpg" alt=""
+          ><img src="images/manganime_background.png" alt=""
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum felis blandit praesent sed augue</h2>
-            <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+            <h2>Mangamine</h2>
+            <p>What Manga is trending?</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            An anime and manga web application with React, allowing users to
+            search and save their favorite content and hold their own unique
+            collection of anime and manga.
           </p>
           <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li>
+              <a
+                href="http://54.210.20.214:3011/"
+                target="_blank"
+                class="button"
+                >Learn More</a
+              >
+            </li>
+          </ul>
+          <ul class="icons">
+            <li>
+              <a
+                href="https://github.com/TLCheng11/manganime"
+                target="_blank"
+                class="icon brands alt fa-github"
+                ><span class="label">GitHub</span></a
+              >
+            </li>
           </ul>
         </div>
         <a href="#four" class="goto-next scrolly">Next</a>
@@ -193,36 +209,52 @@
       <!-- Four -->
       <section id="four" class="spotlight style1 bottom">
         <span class="image fit main"
-          ><img src="images/pic02.jpg" alt=""
+          ><img src="images/cryptopairs_background.png" alt=""
         /></span>
         <div class="content">
           <div class="container">
             <div class="row">
               <div class="col-4 col-12-medium">
                 <header>
-                  <h2>Odio faucibus ipsum integer consequat</h2>
-                  <p>
-                    Nascetur eu nibh vestibulum amet gravida nascetur praesent
-                  </p>
+                  <h2>Cryptopairs</h2>
+                  <p>How is the Crypto Market today?</p>
                 </header>
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-                  Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-                  nisi praesent dolor adipiscing. Integer mi sed nascetur cep
-                  aliquet augue varius tempus lobortis porttitor accumsan
-                  consequat adipiscing lorem dolor.
+                  A cryptocurrency tracking web page where users can search and
+                  compare current information for cryptocurrency.
                 </p>
               </div>
               <div class="col-4 col-12-medium">
-                <p>
-                  Morbi enim nascetur et placerat lorem sed iaculis neque ante
-                  adipiscing adipiscing metus massa. Blandit orci porttitor
-                  semper. Arcu phasellus tortor enim mi mi nisi praesent
-                  adipiscing. Integer mi sed nascetur cep aliquet augue varius
-                  tempus. Feugiat lorem ipsum dolor nullam.
-                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      href="https://tlcheng11.github.io/Coin-Comparison/"
+                      target="_blank"
+                      class="button"
+                      >Learn More</a
+                    >
+                  </li>
+                </ul>
+                <ul class="icons">
+                  <li>
+                    <a
+                      href="https://github.com/jww2145/Coin-Comparison"
+                      target="_blank"
+                      class="icon brands alt fa-github"
+                      ><span class="label">GitHub</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.loom.com/share/6cdfd8543f2c4189a4227887d522304e"
+                      target="_blank"
+                      class="icon brands alt fa-youtube"
+                      ><span class="label">Video</span></a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
