add skill section

--- a/index.html
+++ b/index.html
@@ -28,18 +28,10 @@
             <li>
               <a href="#">Projects</a>
               <ul>
-                <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                <li><a href="no-sidebar.html">No Sidebar</a></li>
-                <li>
-                  <a href="#">Submenu</a>
-                  <ul>
-                    <li><a href="#">Option 1</a></li>
-                    <li><a href="#">Option 2</a></li>
-                    <li><a href="#">Option 3</a></li>
-                    <li><a href="#">Option 4</a></li>
-                  </ul>
-                </li>
+                <li><a href="#one">Build 3D</a></li>
+                <li><a href="#two">TD Games</a></li>
+                <li><a href="#three">Mangamine</a></li>
+                <li><a href="#four">Cryptopairs</a></li>
               </ul>
             </li>
             <li><a href="#skills">Skills</a></li>
@@ -266,67 +258,128 @@
       <section id="skills" class="wrapper style1 special fade-up">
         <div class="container">
           <header class="major">
-            <h2>Accumsan sed tempus adipiscing blandit</h2>
-            <p>
-              Iaculis ac volutpat vis non enim gravida nisi faucibus posuere
-              arcu consequat
-            </p>
+            <h1>Skills</h1>
+            <h2>Frontend</h2>
           </header>
           <div class="box alt">
-            <div class="row gtr-uniform">
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-chart-area"></span>
-                <h3>Ipsum sed commodo</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
+            <div class="skills-box row gtr-uniform">
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
+                />
+                <h3>React</h3>
               </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-comment"></span>
-                <h3>Eleifend lorem ornare</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+                />
+                <h3>HTML</h3>
               </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-flask"></span>
-                <h3>Cubilia cep lobortis</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+                />
+                <h3>CSS</h3>
               </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-paper-plane"></span>
-                <h3>Non semper interdum</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                />
+                <h3>JavaScript</h3>
               </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-file"></span>
-                <h3>Odio laoreet accumsan</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg"
+                />
+                <h3>TypeScript</h3>
               </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-lock"></span>
-                <h3>Massa arcu accumsan</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
+            </div>
+          </div>
+          <header class="major">
+            <h2>Backend</h2>
+          </header>
+          <div class="box alt">
+            <div class="skills-box row gtr-uniform">
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+                />
+                <h3>Python</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain-wordmark.svg"
+                />
+                <h3>Django</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-plain.svg"
+                />
+                <h3>Ruby</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rails/rails-original-wordmark.svg"
+                />
+                <h3>Rails</h3>
+              </section>
+            </div>
+          </div>
+          <header class="major">
+            <h2>Tools</h2>
+          </header>
+          <div class="box alt">
+            <div class="skills-box row gtr-uniform">
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg"
+                />
+                <h3>SQLite</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg"
+                />
+                <h3>PostgreSQL</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg"
+                />
+                <h3>MySQL</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
+                />
+                <h3>Git</h3>
+              </section>
+              <section class="col-2 col-3-medium col-4-xsmall">
+                <img
+                  class="skills"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg"
+                />
+                <h3>Docker</h3>
               </section>
             </div>
           </div>
           <footer class="major">
             <ul class="actions special">
-              <li><a href="#" class="button">Magna sed feugiat</a></li>
+              <li><a href="#" class="button">Resume</a></li>
             </ul>
           </footer>
         </div>
