add medium and video to footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <header>
             <h2>Ting Luen Cheng</h2>
             <p>
-              Expertise in full-stack web engineering from concept to deployment
+              Expertise in full-stack software development from concept to
+              deployment
               <br />
               Passionate about building apps that make a difference
             </p>
@@ -389,12 +390,8 @@
       <section id="contact" class="wrapper style2 special fade">
         <div class="container">
           <header>
-            <h2>Magna faucibus lorem diam</h2>
-            <p>
-              Ante metus praesent faucibus ante integer id accumsan eleifend
-            </p>
+            <h2>Leave me a message.</h2>
           </header>
-          <h3>Form</h3>
           <form method="post" action="#">
             <div class="row gtr-uniform gtr-50">
               <div class="col-6 col-12-xsmall">
@@ -414,35 +411,6 @@
                   value=""
                   placeholder="Email"
                 />
-              </div>
-              <div class="col-12">
-                <select name="category" id="category">
-                  <option value="">- Category -</option>
-                  <option value="1">Manufacturing</option>
-                  <option value="1">Shipping</option>
-                  <option value="1">Administration</option>
-                  <option value="1">Human Resources</option>
-                </select>
-              </div>
-              <div class="col-4 col-12-medium">
-                <input type="radio" id="priority-low" name="priority" checked />
-                <label for="priority-low">Low Priority</label>
-              </div>
-              <div class="col-4 col-12-medium">
-                <input type="radio" id="priority-normal" name="priority" />
-                <label for="priority-normal">Normal Priority</label>
-              </div>
-              <div class="col-4 col-12-medium">
-                <input type="radio" id="priority-high" name="priority" />
-                <label for="priority-high">High Priority</label>
-              </div>
-              <div class="col-6 col-12-medium">
-                <input type="checkbox" id="copy" name="copy" />
-                <label for="copy">Email me a copy of this message</label>
-              </div>
-              <div class="col-6 col-12-medium">
-                <input type="checkbox" id="human" name="human" checked />
-                <label for="human">I am a human and not a robot</label>
               </div>
               <div class="col-12">
                 <textarea
@@ -482,6 +450,22 @@
               target="_blank"
               class="icon brands alt fa-github"
               ><span class="label">GitHub</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://medium.com/@scorpio_ctl"
+              target="_blank"
+              class="icon brands alt fa-medium"
+              ><span class="label">Medium</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.loom.com/share/9e23ee4bb3fa476c8268ec0e6daf8cd8"
+              target="_blank"
+              class="icon brands alt fa-youtube"
+              ><span class="label">Video</span></a
             >
           </li>
         </ul>
