--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Passionate about building apps that make a difference
             </p>
           </header>
-          <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+          <span class="image"><img src="images/profile_pic.jpg" alt="" /></span>
         </div>
         <a href="#one" class="goto-next scrolly">Next</a>
       </section>
