add form submit function

--- a/index.html
+++ b/index.html
@@ -392,7 +392,10 @@
           <header>
             <h2>Leave me a message.</h2>
           </header>
-          <form method="post" action="#">
+          <form
+            method="post"
+            action="https://formsubmit.co/tingluencheng@email.com"
+          >
             <div class="row gtr-uniform gtr-50">
               <div class="col-6 col-12-xsmall">
                 <input
