edit form submit email address

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           </header>
           <form
             method="post"
-            action="https://formsubmit.co/tingluencheng@email.com"
+            action="https://formsubmit.co/tingluencheng@gmail.com"
           >
             <div class="row gtr-uniform gtr-50">
               <div class="col-6 col-12-xsmall">
