add scroll link to projects

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
             <h2>Ting Luen Cheng</h2>
             <p>
               Expertise in full-stack software development from concept to
-              deployment
+              deployment.
               <br />
-              Passionate about building apps that make a difference
+              Passionate about building apps that make a difference.
             </p>
+            <a href="#one" class="scrolly">Check out my works</a>
           </header>
           <span class="image"><img src="images/profile_pic.jpg" alt="" /></span>
         </div>
@@ -378,11 +379,6 @@
               </section>
             </div>
           </div>
-          <footer class="major">
-            <ul class="actions special">
-              <li><a href="#" class="button">Resume</a></li>
-            </ul>
-          </footer>
         </div>
       </section>
 
@@ -472,7 +468,7 @@
             >
           </li>
         </ul>
-        <ul class="copyright">
+        <ul class="icons">
           <li>Email: tingluencheng@gmail.com</li>
         </ul>
       </footer>
