update project name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>
               <a href="#">Projects</a>
               <ul>
-                <li><a href="#one">Build 3D</a></li>
+                <li><a href="#one">FreeDimension</a></li>
                 <li><a href="#two">TD Games</a></li>
                 <li><a href="#three">Mangamine</a></li>
                 <li><a href="#four">Cryptopairs</a></li>
@@ -68,7 +68,7 @@
             <div class="row">
               <div class="col-4 col-12-medium">
                 <header>
-                  <h2>Build 3D</h2>
+                  <h2>FreeDimension</h2>
                   <p>Design, Build, Share</p>
                 </header>
               </div>
