return to home pages after submit message

--- a/index.html
+++ b/index.html
@@ -393,6 +393,11 @@
             action="https://formsubmit.co/tingluencheng@gmail.com"
           >
             <div class="row gtr-uniform gtr-50">
+              <input
+                type="hidden"
+                name="_next"
+                value="https://tlcheng11.github.io/portfolio-website/index.html"
+              />
               <div class="col-6 col-12-xsmall">
                 <input
                   type="text"
